# UtahTeapot

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
Examples/: CMakeLists.txt  main.cpp
Include/ut/: CMakeLists.txt  bezier_surface.hpp  ut_CompileTimeUtahTeapot.h  utah_teapot.hpp
Include/ut/detail/: CMakeLists.txt  bezier_surface.hpp  ut_UtahTeapotData.h
Sources/Libraries/ut/: CMakeLists.txt  bezier_surface.cpp  utah_teapot.cpp  utility.cpp
Sources/Libraries/ut/detail/: bezier_surface.cpp
UtahTeapot/: bezier_surface.cpp  bezier_surface.hpp  main.cpp  mesh_type.h  position.cpp  position.hpp  utah_teapot.cpp  utah_teapot.hpp  utility.cpp  utility.hpp
cpp/: CMakeLists.txt
cpp/Examples/: main.cpp
cpp/Include/ut/: CMakeLists.txt  mesh_type.h  utah_teapot.hpp  utility.hpp
cpp/Sources/: CMakeLists.txt
cpp/Sources/Libraries/: CMakeLists.txt
cpp/Sources/Libraries/ut/: CMakeLists.txt  utah_teapot.cpp
cpp/Sources/Libraries/ut/detail/: CMakeLists.txt
examples/: main.rs
rust/: Cargo.toml
rust/examples/: preview.rs
rust/include/: header.h
rust/src/: bezier_surface.rs  c_ffi.rs  lib.rs
src/: bezier_surface.rs  common.rs  lib.rs
